Bug 154138 - "Change line color" animation effect for rectangle, bottom line
Summary: "Change line color" animation effect for rectangle, bottom line
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.2 target:24.2.0 target:7.6...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Object-Animations
  Show dependency treegraph
 
Reported: 2023-03-11 18:02 UTC by raal
Modified: 2023-09-12 07:28 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (17.02 KB, application/vnd.oasis.opendocument.presentation)
2023-03-11 18:02 UTC, raal
Details
printscreen (1.72 KB, image/png)
2023-03-11 18:03 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2023-03-11 18:02:14 UTC
Description:
"Change line color" animation effect for rectangle, bottom line line not colored. It works for fat lines.

Steps to Reproduce:
1.apply "Change line color" animation effect for rectangle


Actual Results:
bottom line not changed

Expected Results:
all sides of rectangle's lines changed the color


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 288c0920a8475f9f2c537212e04aa7649192ad8c
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

it worked in Version: 6.0.0.0.alpha1+
Comment 1 raal 2023-03-11 18:02:41 UTC
Created attachment 185910 [details]
test file
Comment 2 raal 2023-03-11 18:03:08 UTC
Created attachment 185911 [details]
printscreen
Comment 3 raal 2023-03-11 18:11:50 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.5.
Adding Cc: to Tomaž Vajngerl ; Could you possibly take a look at this one?
Thanks
 c5d7bc8c3c8241acb4d6913b6038c2da164de170 is the first bad commit
commit c5d7bc8c3c8241acb4d6913b6038c2da164de170
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sun Sep 11 17:44:07 2022 +0200

    source c747486335c089baf440b8f040d3ffdc14aa5049

139683: basegfx: replace typedef with a class B2DSize based on Size2D | https://gerrit.libreoffice.org/c/core/+/139683
Comment 4 m_a_riosv 2023-03-11 23:05:26 UTC
Reproducible
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a179f6c91692076e7e17babf4890638caa398384
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo
Comment 5 Commit Notification 2023-09-05 11:36:26 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/e233f4616d6a6b7ca54e3028f77bdee4061bbfab

tdf#154138 C/P regression - used setWidth instead of setHeight

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-09-05 18:07:05 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/15e0dfe709636b517bc1876caa3853606d9b499c

tdf#154138 C/P regression - used setWidth instead of setHeight

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-09-06 12:41:21 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6-1":

https://git.libreoffice.org/core/commit/f73da4f9c2ecbd3d79923db9bdbd15501d12696f

tdf#154138 C/P regression - used setWidth instead of setHeight

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-09-12 07:28:43 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/655a97dd4c16c64340ddb0c3f7cf682f28f45e33

tdf#154138 C/P regression - used setWidth instead of setHeight

It will be available in 7.5.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.