tdf#154138 C/P regression - used setWidth instead of setHeight

Change-Id: I2433b4d32e939cadf499b61dfa9033125eaa3c76
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156557
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>